[project]
name = "propagation_bellhop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
    "pyproj",
    "cartopy",
    "geopy",
    "netCDF4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = ["ALL"]
