[project]
name = "propagation_bellhop"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "OSmOSE", email = "osmose@ensta-bretagne.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
    "pyproj",
    "cartopy",
    "geopy",
    "netCDF4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest"
]

[tool.ruff.lint]
select = ["ALL"]
preview = true

[tool.ruff.format]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"src/**/*.py" = [
    "CPY001", # no copyright at top of file
    "DOC201", # no return in function docstring
    "DOC501", # no raised exceptions in docstring
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "D", # Docstring-related stuff
    "SLF001", # Access to private variables
    "BLE001", # Blind exceptions
    "PLR0913", # Too many arguments in methods
]